# lagrange

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  flake.nix
res/: BUILD.bazel
