load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "version",
    out = "VERSION",
    content = [ "1.8.1" ],
    is_executable = False,
)

pkg_zip(
    name = "resources",
    srcs = glob(["**/*"]) + [ ":version" ],
    out = "resources.lgr",
    compression_level = 0,
    visibility = ["//visibility:public"],
    strip_prefix = ".",
)
