load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

genrule(
    name = "gen_version",
    srcs = [],
    outs = [ "VERSION" ],
    cmd = "echo $(VERSION) > $@",
    toolchains = ["//:version"],
)

pkg_zip(
    name = "resources",
    srcs = glob(["**/*"]) + [ ":gen_version" ],
    out = "resources.lgr",
    compression_level = 0,
    visibility = ["//visibility:public"],
    strip_prefix = ".",
)
